@startuml

title __BLUETOOTH's Class Diagram__\n

  namespace com.ustc.location {
    namespace bluetooth {
      class com.ustc.location.bluetooth.BleTool {
          - beaconPositions : Map<String, Position>
          + BleTool()
          + setBeaconPositions()
          + setScanRule()
          + startScan()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace bluetooth {
      class com.ustc.location.bluetooth.DeviceAdapter {
          - bleDeviceList : List<BleDevice>
          - context : Context
          + DeviceAdapter()
          + addDevice()
          + clear()
          + clearConnectedDevice()
          + clearScanDevice()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
          + removeDevice()
      }
    }
  }
  

  com.ustc.location.bluetooth.BleTool o-- com.ustc.location.MainActivity : ctx
  com.ustc.location.bluetooth.BleTool o-- com.ustc.location.bluetooth.DeviceAdapter : mDeviceAdapter
  com.ustc.location.bluetooth.BleTool o-- com.ustc.location.location.Position : userPos
  com.ustc.location.bluetooth.DeviceAdapter -up-|> android.widget.BaseAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
